why the hell was it in french

--- a/verify/index.html
+++ b/verify/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Verify</title>
-    <script src="https://js.hcaptcha.com/1/api.js?hl=fr" async defer></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
   </head>
   <body>
     <h1>bpVerify</h1>
