--- a/verify/index.html
+++ b/verify/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>bpVerify</h1>
-    <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark" data-size="compact"></div>
+    <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
   </body>
 </html>
