hopefully finish bare bones index.html with no redirects

--- a/verify/index.html
+++ b/verify/index.html
@@ -1,10 +1,22 @@
 <html>
   <head>
-    <title>Verify</title>
+    <title>bpVerify | Verify</title>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script>
+      window.onload = function() {
+        hcaptcha.execute(hcaptcha.render($(".captcha")), { async: true })
+        .then(({ response, key }) => {
+            console.log(response, key);
+        })
+        .catch(err => {
+            console.error(err);
+        });
+      };
+    </script>
   </head>
   <body>
     <h1>bpVerify</h1>
-    <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
+    <div class="captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
   </body>
 </html>
