--- a/verify/index.html
+++ b/verify/index.html
@@ -7,17 +7,34 @@
       window.onload = setTimeout(setupCaptcha, 1000)
       function setupCaptcha() {
         hcaptcha.execute()
-        .then(({ response, key }) => {
+        /*.then(({ response, key }) => {
             console.log(response, key);
         })
         .catch(err => {
             console.error(err);
-        });
+        });*/
       };
+        document.getElementById('myForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent default form submission
+
+            // Get the hCaptcha response
+            const hCaptchaResponse = hcaptcha.getResponse();
+
+            if (hCaptchaResponse) {
+                // hCaptcha verification successful, redirect to another page
+                window.location.href = '/success';
+            } else {
+                // hCaptcha verification failed, show an error message
+                alert('Please complete the hCaptcha.');
+            }
+        });
     </script>
   </head>
   <body>
     <h1>bpVerify</h1>
-    <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
+    <form id="myForm" action="javascript:void(0);" method="POST">
+      <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
