--- a/success/index.html
+++ b/success/index.html
@@ -1,8 +1,43 @@
 <html>
     <head>
         <title>bpVerify | Success!</title>
+        <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+        <script>
+            function makeid(length) {
+                let result = '';
+                const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+                const charactersLength = characters.length;
+                let counter = 0;
+                while (counter < length) {
+                    result += characters.charAt(Math.floor(Math.random() * charactersLength));
+                    counter += 1;
+                };
+                return result;
+            };
+            function random(min, max) {
+                return Math.round(Math.random() * (max - min) + min);
+            }
+        </script>
     </head>
     <body>
         <h1>Success!</h1>
+        <p id="key">Generating key...</p>
+        <script>
+            let url = new URL(window.location);
+            let params = new URLSearchParams(url.search);
+            let toEncode = params.get("key")
+            let splitter = random(100000000, 999999999)
+            let mult = random(100000000, 999999999)
+            let key = (toEncode*mult).toString()+"/"+splitter.toString()+"/"+mult.toString();
+            let key2 = ""
+            for (let i = 0; i < toEncode.length; i++) {
+                if (Math.round(Math.random()) == 1) {
+                    key2 = key2 + key[i] + makeid(1);
+                } else {
+                    key2 = key2 + key[i]
+                };
+            };
+            $("#key").val() = key;
+        </script>
     </body>
 </html>
