--- a/verify/index.html
+++ b/verify/index.html
@@ -30,6 +30,7 @@
                 alert('Please complete the hCaptcha.');
                 captcha.execute();
             }
+            return false
         };
     </script>
   </head>
