i dont know how to jquery apparently

--- a/success/index.html
+++ b/success/index.html
@@ -37,7 +37,7 @@
                     key2 = key2 + key[i]
                 };
             };
-            $("#key").val() = key;
+            $("#key").text(key)
         </script>
     </body>
 </html>
