maybe everything'll work... maybe...

--- a/verify/index.html
+++ b/verify/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <h1>bpVerify</h1>
-    <form id="myForm" onsubmit="javascript:submit();" method="POST">
+    <form id="myForm" onsubmit="javascript:return submit();" method="POST">
       <div class="h-captcha" data-sitekey="44744750-3c68-4f10-9574-b4d260fc3946" data-theme="dark"></div>
       <button type="submit">Submit</button>
     </form>
