--- a/success/index.html
+++ b/success/index.html
@@ -36,7 +36,7 @@
                 } else {
                     key2 = key2 + key[i]
                 };
-            };
+            }; /* meaningless comment because github WONT SYNC MY DAMN CODE */
             $("#key").text(key)
         </script>
     </body>
