Add more instruction to the success page and fix theming

--- a/success/index.html
+++ b/success/index.html
@@ -29,7 +29,11 @@
 <body>
     <div class="mainContainer">
         <h1>Success!</h1>
-        <p id="key">Generating key...</p>
+        <p>Run the below command to verify in the server.</p>
+        <div class="container">
+            <p>/verifyKey key:</p>
+            <p id="key">Generating key...</p>
+        </div>
     </div>
     <script>
         let url = new URL(window.location);
